# 4451-Rag-Demos

./: README.md  ingest.py  pyproject.toml  rag_agent.py
core/: chunking.py  decompose.py  ingestion.py  pipeline.py  store.py  structured_chunking.py  synthesis.py
projects/v1-agentic-rag/: README.md  ingest.py  rag_agent.py
rag/: config.py  ingestion.py  retrieval.py  structured_chunking.py  synthesis.py
